# CS475-Project1

./: .gitignore  CITATIONS.txt  README.txt  buildandrun.sh  runtimeconfig.json
src/: CMakeLists.txt
src/Project1/: CMakeLists.txt  Config.cpp  Config.h  Project1.cpp  Project1.h  Utils.cpp  Utils.h
